upgraded packages, fixed spacing

--- a/public/css/shared/books.css
+++ b/public/css/shared/books.css
@@ -31,6 +31,7 @@
 
 .book-details {
     display: flex;
+    grid-gap: 1rem;
 }
 
 .book-details-label {
